# FuzzBenchmark

./: README.md
Code/cflow/: fuzz_cflow.sh
Code/cflow/fuzz_seed/: Makefile  Makefile.am  Makefile.in  alloca.h  alloca.in.h  argp-ba.c  argp-eexst.c  argp-fmtstream.c  argp-fmtstream.h  argp-fs-xinl.c  argp-help.c  argp-namefrob.h  argp-parse.c  argp-pin.c  argp-pv.c  argp-pvh.c  argp-version-etc.c  argp-version-etc.h  argp-xinl.c  argp.h  asnprintf.c  basename-lgpl.c  bitrotate.h  dirname-lgpl.c  dirname.h  dosname.h  errno.in.h  error.c  error.h  exitfail.c  exitfail.h  float+.h  float.c  float.in.h  getopt.c  getopt.h  getopt.in.h  getopt1.c  getopt_int.h  gettext.h  (+70 more)
Document/bison/: funbison.sh
Document/bison/fuzz_seed/: calc++-parser.tab.cc  calc++-parser.tab.hh
Document/nasm/: download
Document/nasm/POC/: README.txt  id:000000,sig:11,src:000064,op:havoc,rep:2  id:000000,sig:11,src:000101,op:havoc,rep:16 (copy)  id:000000,sig:11,src:004710,op:havoc,rep:16  id:000001,sig:08,src:007290,op:flip1,pos:157  id:000001,sig:11,src:000101,op:havoc,rep:16  id:000002,sig:11,src:005779,op:havoc,rep:32  id:000002,sig:11,src:008017,op:arith8,pos:76,val:+15  id:000003,sig:11,src:008017,op:arith8,pos:76,val:-31  id:000004,sig:11,src:008017,op:havoc,rep:8  id:000005,sig:08,src:007049,op:havoc,rep:8  id:000005,sig:11,src:008017,op:havoc,rep:8  id:000006,sig:11,src:008017,op:havoc,rep:8  id:000007,sig:11,src:008017,op:havoc,rep:8  id:000008,sig:11,src:008017,op:havoc,rep:8  id:000009,sig:11,src:008017,op:havoc,rep:16  id:000010,sig:11,src:008017,op:havoc,rep:8  id:000011,sig:11,src:008017,op:havoc,rep:16  id:000012,sig:11,src:008017,op:havoc,rep:16  id:000013,sig:11,src:008017,op:havoc,rep:4  id:000014,sig:08,src:008539,op:havoc,rep:16  id:000015,sig:08,src:008539,op:havoc,rep:16  id:000016,sig:11,src:008888,op:arith8,pos:46,val:+15  id:000017,sig:11,src:008888,op:arith8,pos:46,val:-31  id:000018,sig:11,src:009072,op:flip2,pos:669  id:000019,sig:11,src:009072,op:havoc,rep:32  id:000020,sig:11,src:009072,op:havoc,rep:8  id:000021,sig:11,src:009072,op:havoc,rep:8  id:000022,sig:11,src:009072,op:havoc,rep:8  id:000023,sig:11,src:009072,op:havoc,rep:32  id:000024,sig:11,src:009072,op:havoc,rep:16  id:000025,sig:11,src:009072,op:havoc,rep:32  id:000026,sig:11,src:008890,op:arith8,pos:75,val:-31  id:000027,sig:08,src:009132,op:havoc,rep:16
Document/nasm/crashes/: README.txt  id:000000,sig:11,src:005901,op:havoc,rep:8  id:000001,sig:11,src:006766,op:havoc,rep:32  id:000002,sig:08,src:006956,op:flip1,pos:288  id:000003,sig:08,src:006956,op:havoc,rep:8  id:000004,sig:08,src:006956,op:havoc,rep:64  id:000005,sig:08,src:007068,op:arith8,pos:246,val:-6  id:000006,sig:11,src:008193,op:flip2,pos:835  id:000007,sig:11,src:008193,op:arith8,pos:848,val:+31  (+7 more)
IEEETran-format/: .gitignore  Main.tex
IEEETran-format/bib/: reference.bib
IEEETran-format/pic/: AFL.eps  AFL.graffle  AbstractCFG.eps  AbstractCFG.graffle  TAFL.eps  TAFL.graffle  design.eps
IEEETran-format/texfile/: 0_abstract.tex  1_Introcution.tex  2_Background.tex  3_Methodology.tex  4_Approach.tex  4_Implementation.tex  5_Experiment.tex  6_Discussion.tex  7_Conlusion.tex
Image/ImageMagick-7.0.2/: DownloadLink  FuzzImageMaick.sh
Image/jasper-2.0.14/: DownloadLink
jasper-2.0.10/: ChangeLog  DownloadLink  log
jasper-2.0.10/build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
jasper-2.0.10/fuzzing_output/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
jasper-2.0.12/: DownloadLink  log
jasper-2.0.12/build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
jasper-2.0.12/fuzzing_output/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
jasper-2.0.14/: DownloadLink  FuzzJasper.sh  jasper_run.sh  log
jasper-2.0.14/build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
jasper-2.0.14/crashes/: id:000011,sig:06,src:000515,op:flip1,pos:8  id:000013,sig:06,src:000563,op:havoc,rep:2  id:000020,sig:06,src:000931,op:flip1,pos:3  id:000022,sig:06,src:000931,op:arith8,pos:3,val:+7  id:000030,sig:06,src:001028,op:havoc,rep:2  id:000034,sig:06,src:001033,op:ext_AO,pos:8  id:000036,sig:06,src:001037,op:flip1,pos:8  id:000039,sig:06,src:001099,op:arith8,pos:5,val:-7  id:000042,sig:06,src:001151,op:flip1,pos:7
jasper-2.0.14/fuzzing_output/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
protocols/: README.md
protocols/ftp/: proftpd-1.3.3a.tar.bz2
protocols/ftp/BeroFTPD-1.3.4/: CHANGES  CONTRIBUTORS  FUTURE-CHANGES  INSTALL  KNOWN_BUGS  Makefile.in  NOTES  README  VIRTUAL.FTP.SUPPORT  config.h.in  configure  configure-help.diff  configure.in
protocols/ftp/BeroFTPD-1.3.4/doc/: ftpaccess.5  ftpconversions.5  ftpd.8  ftphosts.5  ftprestart.8  ftpservers.5  ftpshut.8  xferlog.5
protocols/ftp/BeroFTPD-1.3.4/doc/examples/: ftpaccess  ftpconversions
protocols/ftp/BeroFTPD-1.3.4/src/: Makefile.in  access.c  acl.c  auth.c  authenticate.c  authenticate.h  ckconfig.c  config.h.in  conversions.c  extensions.c  extensions.h  ftpcmd.y  ftpcount.c  ftpd.c  ftprestart.c  ftpshut.c  getpwnam.c  getpwnam.h  glob.c  hostacc.c  hostacc.h  logwtmp.c  newvers.sh  pathnames.h.in  paths.c  popen.c  private.c  rdservers.c  realpath.c  routevector.c  secure.c  sigfix.c  socket.c  socket.h  tool.c  tool.h
protocols/ftp/BeroFTPD-1.3.4/src/ftpck/: Makefile.in  README  domains.h  ftpck.1  ftpck.c  ftpck.h  ftpck.html
protocols/ftp/BeroFTPD-1.3.4/support/: BeroFTPD_glob.h  Makefile.in  authuser.c  authuser.h  config.h.in  fnmatch.c  ftp.h  ftruncate.c  ftw.c  getusershell.c  glob.c  sco.c  snprintf.c  strcasecmp.c  strcasestr.c  strdup.c  strerror.c  strncasecmp.c  strsep.c  strstr.c  syslog.c  vsnprintf.c
protocols/ftp/BeroFTPD-1.3.4/util/: Makefile  gzip2cmp.c  recompress  recompress.c  xferstats
(+13617 files in other folders)
